--- a/docs/doxygen-custom/doxygen-awesome-sidebar-only.css
+++ b/docs/doxygen-custom/doxygen-awesome-sidebar-only.css
@@ -28,88 +28,90 @@ SOFTWARE.
  */
 
 html {
-    /* side nav width. MUST be = `TREEVIEW_WIDTH`.
+  /* side nav width. MUST be = `TREEVIEW_WIDTH`.
      * Make sure it is wide enough to contain the page title (logo + title + version)
      */
-    --side-nav-fixed-width: 335px;
-    --menu-display: none;
-
-    --top-height: 120px;
-    --toc-sticky-top: -25px;
-    --toc-max-height: calc(100vh - 2 * var(--spacing-medium) - 25px);
+  --side-nav-fixed-width: 335px;
+  --menu-display: none;
+  --top-height: 120px;
+  --toc-sticky-top: -25px;
+  --toc-max-height: calc(100vh - 2 * var(--spacing-medium) - 25px);
 }
 
 #projectname {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
-
 @media screen and (min-width: 768px) {
-    html {
-        --searchbar-background: var(--page-background-color);
-    }
+  html {
+    --searchbar-background: var(--page-background-color);
+  }
 
-    #side-nav {
-        min-width: var(--side-nav-fixed-width);
-        max-width: var(--side-nav-fixed-width);
-        top: var(--top-height);
-        overflow: visible;
-    }
+  #side-nav {
+    min-width: var(--side-nav-fixed-width);
+    max-width: var(--side-nav-fixed-width);
+    top: var(--top-height);
+    overflow: visible;
+  }
 
-    #nav-tree, #side-nav {
-        height: calc(100vh - var(--top-height)) !important;
-    }
+  #nav-tree,
+  #side-nav {
+    height: calc(100vh - var(--top-height)) !important;
+  }
 
-    #nav-tree {
-        padding: 0;
-    }
+  #nav-tree {
+    padding: 0;
+  }
 
-    #top {
-        display: block;
-        border-bottom: none;
-        height: var(--top-height);
-        margin-bottom: calc(0px - var(--top-height));
-        max-width: var(--side-nav-fixed-width);
-        overflow: hidden;
-        background: var(--side-nav-background);
-    }
-    #main-nav {
-        float: left;
-        padding-right: 0;
-    }
+  #top {
+    display: block;
+    border-bottom: none;
+    height: var(--top-height);
+    margin-bottom: calc(0px - var(--top-height));
+    max-width: var(--side-nav-fixed-width);
+    overflow: hidden;
+    background: var(--side-nav-background);
+  }
 
-    .ui-resizable-handle {
-        cursor: default;
-        width: 1px !important;
-        box-shadow: 0 calc(-2 * var(--top-height)) 0 0 var(--separator-color);
-    }
+  #main-nav {
+    float: left;
+    padding-right: 0;
+  }
 
-    #nav-path {
-        position: fixed;
-        right: 0;
-        left: var(--side-nav-fixed-width);
-        bottom: 0;
-        width: auto;
-    }
+  .ui-resizable-handle {
+    cursor: default;
+    width: 1px !important;
+    box-shadow: 0 calc(-2 * var(--top-height)) 0 0 var(--separator-color);
+  }
 
-    #doc-content {
-        height: calc(100vh - 31px) !important;
-        padding-bottom: calc(3 * var(--spacing-large));
-        padding-top: calc(var(--top-height) - 80px);
-        box-sizing: border-box;
-        margin-left: var(--side-nav-fixed-width) !important;
-    }
+  #nav-path {
+    position: fixed;
+    right: 0;
+    left: var(--side-nav-fixed-width);
+    bottom: 0;
+    width: auto;
+  }
 
-    #MSearchBox {
-        width: calc(var(--side-nav-fixed-width) - calc(2 * var(--spacing-medium)));
-    }
+  #doc-content {
+    height: calc(100vh - 31px) !important;
+    padding-bottom: calc(3 * var(--spacing-large));
+    padding-top: calc(var(--top-height) - 80px);
+    box-sizing: border-box;
+    margin-left: var(--side-nav-fixed-width) !important;
+  }
 
-    #MSearchField {
-        width: calc(var(--side-nav-fixed-width) - calc(2 * var(--spacing-medium)) - 65px);
-    }
+  #MSearchBox {
+    width: calc(var(--side-nav-fixed-width) - calc(2 * var(--spacing-medium)));
+  }
 
-    #MSearchResultsWindow {
-        left: var(--spacing-medium) !important;
-        right: auto;
-    }
+  #MSearchField {
+    width: calc(
+      var(--side-nav-fixed-width) - calc(2 * var(--spacing-medium)) - 65px
+    );
+  }
+
+  #MSearchResultsWindow {
+    left: var(--spacing-medium) !important;
+    right: auto;
+  }
 }
